--- a/Dienstnutzer/public/index.html
+++ b/Dienstnutzer/public/index.html
@@ -3,11 +3,21 @@
 <head>
   <title>Express</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
+  <script
+          src="https://code.jquery.com/jquery-3.4.1.min.js"
+          integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+          crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <h1>Express</h1>
+  <h1>Restaurantreservierung</h1>
   <p>Welcome to Express</p>
+  <button onclick="myFunction()">Click me</button>
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    var socket = io();
+  </script>
 </body>
 
 </html>
+
