--- a/Dienstnutzer/public/index.html
+++ b/Dienstnutzer/public/index.html
@@ -34,7 +34,7 @@
     <iframe id="googleframe" target="_top" width="600"
             height="450"
             frameborder="0" style="border:0"
-            src="https://www.google.com/maps/embed/v1/directions?key=AIzaSyBVgTiWDbf4snT64vZvGfEZ36qXWPewvko&origin=51.031551778036544+7.566896077101712&destination=Cologne+Germany"
+            src=""
             allowfullscreen></iframe>
 </div>
 
